--- a/app/index.html
+++ b/app/index.html
@@ -164,5 +164,7 @@
       <p><span class="site-footer__text">Copyright &copy; 2018 Clear View Escapes. All rights reserved.</span><a class="btn btn--orange" href="#">Get in Touch</a></p>
     </div>
   </footer>
+
+  <script src="/temp/scripts/app.js"></script>
 </body>
 </html>
